apps/homelab-web/base/middleware-basic-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: homelab-web-basic-auth
  namespace: homelab-web
spec:
  basicAuth:
    secret: homelab-web-basic-auth
