apps/homelab-web/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelab-web
  namespace: homelab-web
  labels:
    app.kubernetes.io/name: homelab-web
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: homelab-web-homelab-web-basic-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: portal.dev.homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homelab-web
                port:
                  number: 80
